testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassExpressionAnonymous.errors.txt
index.js(3,16): error TS8010: Type annotations can only be used in TypeScript files.


==== index.js (1 errors) ====
    module.exports = class {
        /**
         * @param {number} p
                   ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        constructor(p) {
            this.t = 12 + p;
        }
    }